--- a/src/views/partials/type3.pug
+++ b/src/views/partials/type3.pug
@@ -3,14 +3,14 @@
         .title__type
             span 유형 3
         .title__battery
-            img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EC%9C%A0%ED%98%953%EB%B0%B0%ED%84%B0%EB%A6%AC.png")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EC%9C%A0%ED%98%953%EB%B0%B0%ED%84%B0%EB%A6%AC.png")
             span 
                 strong 관태기 80%
                 | 
                 | 가능한 모두와 잘 지내고 싶어
     .content__row
         .mainImage
-            img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EC%9C%A0%ED%98%953%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EC%9C%A0%ED%98%953%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .info
             span 모든 관계 내가 다 지키겠어!
                 br
@@ -26,6 +26,6 @@
                 | 관계미니멀리스트형
     .sharedSNS
         .sharedImage
-            img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EA%B3%B5%ED%86%B5%EA%B3%B5%EC%9C%A0%ED%95%98%EA%B8%B0.png")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EA%B3%B5%ED%86%B5%EA%B3%B5%EC%9C%A0%ED%95%98%EA%B8%B0.png")
         .addThis
             .addthis_inline_share_toolbox_eouf
