--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -23,4 +23,4 @@
                 .dot
             .resultBtn
                 .button.selectBtn(data-id="loading" ontouchstart="")
-                    img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EA%B2%B0%EA%B3%BC%EB%A1%9C%EB%94%A9/%EA%B2%B0%EA%B3%BC%ED%99%95%EC%9D%B8%EB%B2%84%ED%8A%BC.png")
+                    img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EA%B2%B0%EA%B3%BC%EB%A1%9C%EB%94%A9/%EA%B2%B0%EA%B3%BC%ED%99%95%EC%9D%B8%EB%B2%84%ED%8A%BC.png")
