--- a/src/views/screens/question2.pug
+++ b/src/views/screens/question2.pug
@@ -1,15 +1,15 @@
 .slide.question.q1
     .slide__content
         .topImage
-            img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
         .content__row
             .count
-                img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%88%AB%EC%9E%90%EC%9B%90.png")
+                img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%88%AB%EC%9E%90%EC%9B%90.png")
             .main
                 .main__text
                     span 친한 친구와의 식사 자리에서<br>메뉴를 고를 때, 당신의 선택은?
                 .main__image
-                    img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
+                    img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
